# new_profile

./: .dockerignore  .gitignore  DUCKDB_README.md  Dockerfile  Makefile  README.md  debug_map.html  docker-compose.yml  emergency_railway_cleanup.sh  manage.py  pip.conf  pyproject.toml  requirements.txt  test_duckdb.py  test_map.html
blog/: admin.py  models.py  views.py
blog/management/commands/: create_sample_post.py
blog/migrations/: 0001_initial.py
blog/static/taxi-viz/: index.html
blog/static/taxi-viz/assets/: index-B0AUaK9S.js  index-BjdANgr9.js  index-BrlTxpO8.js  index-C-Arlh6J.css  index-CVjmhzII.js  index-CZzRIncP.js  index-CzrRdBP3.js  index-D2QNbVd5.js  index-DQgdx2pZ.js  index-DxTEQdPk.css  index-bP0OFGEr.css  index-rH3sSQRQ.js
blog/templates/blog/: about.html  base.html  post_detail.html  post_list.html  projects.html  taxi_viz.html  testing.html  testing2.html  testing3.html
frontend/taxi-viz/: package-lock.json  package.json
frontend/taxi-viz/src/: App.tsx
frontend/taxi-viz/src/components/: DatePicker.tsx  StatsDashboard.tsx  TaxiMap.tsx
frontend/taxi-viz/src/data/: taxiZones.ts
frontend/taxi-viz/src/services/: api.ts
portfolio_blog/: middleware.py  settings.py  urls.py  wsgi.py
taxi_api/: admin.py  apps.py  duckdb_views.py  models.py  proxy_views.py  serializers.py  services.py  test_views.py  tests.py  urls.py  views.py
taxi_api/management/commands/: cleanup_data.py  db_stats.py  load_taxi_data.py
taxi_api/migrations/: 0001_initial.py
